--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint:styles": "stylelint 'src/**/*.scss'",
+    "lint:scripts": "next lint",
+    "lint": "npm run lint:styles && npm run lint:scripts"
   },
   "dependencies": {
     "@next/font": "13.1.6",
@@ -19,5 +21,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "sass": "^1.58.0",
+    "stylelint": "^14.16.1",
+    "stylelint-config-standard-scss": "^6.1.0"
   }
 }
