feat: a little styling prep

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -3,6 +3,7 @@
     "stylelint-config-standard-scss"
   ],
   "rules": {
-    "string-quotes": "double"
-   }
+    "value-keyword-case": null,
+    "string-quotes": null
+  }
  }
